--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <script src="test.js" charset="utf-8"></script>
     <script src="greet.js" charset="utf-8"></script>
+    <script src="test.isDayName.js" charset="utf-8"></script>
    <script>
         mocha.checkLeaks();
         mocha.run();
