--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
     <script src="test.js" charset="utf-8"></script>
     <script src="greet.js" charset="utf-8"></script>
     <script src="test.isDayName.js" charset="utf-8"></script>
+    <script src="test.yearsAgo.js" charset="utf-8"></script>
+    <script src="test.regCheck.js" charset="utf-8"></script>
+    <script src="test.countAllFromTown.js" charset="utf-8"></script>
+    <script src="test.countAllPaarl.js" charset="utf-8"></script>
+    <script src="test.totalPhoneBill.js" charset="utf-8"></script>
+    <script src="test.fromWhere.js" charset="utf-8"></script>
+    <script src="test.findItemsOver20.js" charset="utf-8"></script>
+    <script src="test.findItemsOver.js" charset="utf-8"></script>
+    <script src="test.mostProfitableDepartment.js" charset="utf-8"></script>
+    <script src="test.countRegNumber.js" charset="utf-8"></script>
    <script>
         mocha.checkLeaks();
         mocha.run();
