--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <script src="test.mostProfitableDepartment.js" charset="utf-8"></script>
     <script src="test.countRegNumber.js" charset="utf-8"></script>
     <script src="test.isFromBellville.js" charset="utf-8"></script>
+    <script src="test.transportFee.js" charset="utf-8"></script>
    <script>
         mocha.checkLeaks();
         mocha.run();
