--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="test.js" charset="utf-8"></script>
     <script src="greet.js" charset="utf-8"></script>
     <script src="test.isDayName.js" charset="utf-8"></script>
-    <script src="yearsAgo.js" charset="utf-8"></script>
+    <script src="test.yearsAgo.js" charset="utf-8"></script>
     <script src="test.regCheck.js" charset="utf-8"></script>
     <script src="test.countAllFromTown.js" charset="utf-8"></script>
     <script src="test.countAllPaarl.js" charset="utf-8"></script>
